<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Closed Circles</string>
    <string name="promo">Group chat done right</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>
    <string name="action_search">Search</string>
    <string name="action_new_event">New thread</string>
    <string name="action_delete">Delete</string>
    <string name="action_user_info">User info</string>
    <string name="action_copy_text">Copy text</string>
    <string name="action_markread">Mark all read</string>
    <string name="get_started">To get started, log in using Facebook or Google account</string>
    <string name="select_circle">To create new thread, please select circle</string>
    <string name="app_id">228225270673974</string>
    <string name="deleted_message">[deleted]</string>
    <string name="action_set_open_mode">Set opened reply mode</string>
    <string name="action_set_closed_mode">Set closed reply mode</string>
    <string name="play_services_error">Google Play services is not available.  This application will close.</string>
    <string name="close">Close</string>
    <string name="action_mark_all_read">Mark all read</string>
    <string name="no_connection">There is no connection</string>
    <string name="delete_failed">Delete failed</string>
    <string name="server_restart">Server was restarted</string>
    <string name="user_info">User info</string>
</resources>
